--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -68,6 +68,10 @@ Mappings:
       abbreviation: stag
     Production:
       abbreviation: prod
+  # Each app should be given a listener rule priority prefix between 10 and 99.
+  # In nested stacks, listener rule priorities are created by combining the
+  # prefix with either two (eg 01) or three (eg 765) more digits. Wildcard rules
+  # should use two digits, and VPC-based domains should use three digits.
   ALBListenerRulePriorityMap:
     Play:
       prefix: 11
