--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -79,7 +79,7 @@ Resources:
           Value: !Sub Publish-${EnvironmentType}
       VpcId: !Ref VPC
   # ALB Listener Rules
-  PublishALBHTTPHostVPCListenerRule:
+  PublishALBHTTPSHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
       Actions:
@@ -88,12 +88,11 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 01]]
-  PublishALBHTTPHostStagingGenericListenerRule:
+            - publish.*
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+  PublishALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateStagingResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref PublishALBTargetGroup
@@ -101,48 +100,9 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - publish.staging.prx.tech
+            - publish.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 02]]
-  PublishALBHTTPHostProductionGenericListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateProductionResources
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref PublishALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - publish.prx.tech
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 03]]
-  PublishALBHTTPHostStagingGenericAltListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateStagingResources
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref PublishALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - publish-staging.prx.tech
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 04]]
-  PublishALBHTTPHostProductionGenericAltListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateProductionResources
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref PublishALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - publish.prx.org
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 05]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
   PublishALBHTTPSHostVPCListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -154,10 +114,9 @@ Resources:
           Values:
             - !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 11]]
-  PublishALBHTTPSHostStagingGenericListenerRule:
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 999]]
+  PublishALBHTTPHostVPCListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateStagingResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref PublishALBTargetGroup
@@ -165,48 +124,9 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - publish.staging.prx.tech
-      ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 12]]
-  PublishALBHTTPSHostProductionGenericListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateProductionResources
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref PublishALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - publish.prx.tech
-      ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 13]]
-  PublishALBHTTPSHostStagingGenericAltListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateStagingResources
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref PublishALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - publish-staging.prx.tech
-      ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 14]]
-  PublishALBHTTPSHostProductionGenericAltListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateProductionResources
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref PublishALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - publish.prx.org
-      ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 15]]
+            - !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech
+      ListenerArn: !Ref PlatformALBHTTPListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 999]]
   # ECS Service
   PublishTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
