Add a comment re: rules priorities

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -72,6 +72,9 @@ Mappings:
   # In nested stacks, listener rule priorities are created by combining the
   # prefix with either two (eg 01) or three (eg 765) more digits. Wildcard rules
   # should use two digits, and VPC-based domains should use three digits.
+  #
+  # Higher-traffic apps should be given a higher priority (lower number) to
+  # reduce the number of rules evaluations needed for more common requests
   ALBListenerRulePriorityMap:
     Play:
       prefix: 10
