Add reformatted audiogram A ALIAS name

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -164,6 +164,12 @@ Resources:
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
+        - Type: A
+          Name: !Sub |
+            audiogram.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Ref PlatformALBDNSName
+            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
   # AudiogramScalableTarget:
   #   Type: "AWS::ApplicationAutoScaling::ScalableTarget"
   #   Properties:
@@ -256,4 +262,4 @@ Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      ${EnvironmentTypeAbbreviation}-audiogram.${VPC}.prx.tech.
+      audiogram.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
