Output platform ALB DNS name from root stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -344,6 +344,9 @@ Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
     Value: !GetAtt CertificateStack.Outputs.CertificateArn
+  PlatformALBDNSName:
+    Description: The DNS name for the platform application load balancer
+    Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDNSName
   AudiogramHostedZoneDNSName:
     Description: Domain name for audiogram app
     Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
