Add more reformatted A ALIAS names

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -182,6 +182,11 @@ Resources:
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
+        - Type: A
+          Name: !Sub castle.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Ref PlatformALBDNSName
+            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
   # CloudWatch Alarms
   CastleALBTargetGroup500Alarm:
     Type: "AWS::CloudWatch::Alarm"
@@ -214,4 +219,4 @@ Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      ${EnvironmentTypeAbbreviation}-castle.${VPC}.prx.tech.
+      castle.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
