--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -178,6 +178,11 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: A
+          Name: !Sub publish-${EnvironmentTypeAbbreviation}.${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Ref PlatformALBDNSName
+            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
+        - Type: A
           Name: !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
@@ -214,4 +219,4 @@ Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
+      publish-${EnvironmentTypeAbbreviation}.${VPC}.prx.tech.
