Output dualstack DNS name for platform ALB

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -347,6 +347,10 @@ Outputs:
   PlatformALBDNSName:
     Description: The DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDNSName
+  PlatformALBDualstackDNSName:
+    Description: >
+      The dualstack DNS name for the platform application load balancer
+    Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
   AudiogramHostedZoneDNSName:
     Description: Domain name for audiogram app
     Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
