Fix VPC DNS for play and publish

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -178,12 +178,12 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: A
-          Name: !Sub publish-${EnvironmentTypeAbbreviation}.${VPC}.prx.tech.
+          Name: !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
         - Type: A
-          Name: !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
+          Name: !Sub publish.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
