Remove old app VPC DNS record sets

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -178,11 +178,6 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: A
-          Name: !Sub ${EnvironmentTypeAbbreviation}-play.${VPC}.prx.tech.
-          AliasTarget:
-            DNSName: !Ref PlatformALBDNSName
-            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
-        - Type: A
           Name: !Sub play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
@@ -219,4 +214,4 @@ Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      play-${EnvironmentTypeAbbreviation}.${VPC}.prx.tech.
+      play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
