Switch over LB certificate

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -49,6 +49,9 @@ Resources:
         - Key: Name
           Value: !Sub "${EnvironmentType} ${VPC} wildcard"
 Outputs:
+  WildcardCertificateArn:
+    Description: The ARN for the wildcard certificate
+    Value: !Ref VpcWildcardCertificate
   CertificateArn:
     Description: The ARN for the wildcard certificate
     Value: !Ref VpcCertificate
