--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -148,7 +148,7 @@ Resources:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
@@ -343,7 +343,7 @@ Resources:
 Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
-    Value: !GetAtt CertificateStack.Outputs.CertificateArn
+    Value: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
   PlatformALBDNSName:
     Description: The DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDNSName
