Add CDN subdomain to wildcard cert

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -23,6 +23,7 @@ Resources:
         - "*.prx.org"
         - "*.prx.tech"
         - "*.staging.prx.tech"
+        - !Sub "*.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
       Tags:
         - Key: Project
           Value: platform.prx.org
