--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -315,6 +315,7 @@ Resources:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
         PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
         PlatformALBFullName: !GetAtt LoadBalancersStack.Outputs.PlatformALBFullName
         PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
