Add missing origin config to play CDN

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -206,8 +206,14 @@ Resources:
         #   Logging
         Origins:
           CustomOriginConfig:
-            Custom Origin
-          DomainName: String
+            # HTTPPort: Integer
+            HTTPSPort: 443
+            OriginProtocolPolicy: https-only
+            OriginSSLProtocols:
+              - TLSv1.2
+              - TLSv1.1
+              - TLSv1
+          DomainName: !Sub "play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech."
           Id: !FindInMap [Shared, Project, name]
           # OriginCustomHeaders:
           #   - OriginCustomHeader
