Only cache url query string for play origin

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -190,8 +190,8 @@ Resources:
             # Headers:
             #   - String
             QueryString: true
-            # QueryStringCacheKeys:
-            #   - String
+            QueryStringCacheKeys:
+              - url
           # MaxTTL: Number
           # MinTTL: Number
           # SmoothStreaming: Boolean
