Fix syntax error

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -185,7 +185,7 @@ Resources:
           Compress: true
           # DefaultTTL: Number
           ForwardedValues:
-             Cookies:
+            # Cookies:
             #   Cookies
             # Headers:
             #   - String
