Fix origins syntax

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -205,21 +205,21 @@ Resources:
         # Logging:
         #   Logging
         Origins:
-          CustomOriginConfig:
-            # HTTPPort: Integer
-            HTTPSPort: 443
-            OriginProtocolPolicy: https-only
-            OriginSSLProtocols:
-              - TLSv1.2
-              - TLSv1.1
-              - TLSv1
-          DomainName: !Sub "play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech."
-          Id: !FindInMap [Shared, Project, name]
-          # OriginCustomHeaders:
-          #   - OriginCustomHeader
-          # OriginPath: String
-          # S3OriginConfig:
-          #   S3 Origin
+          - CustomOriginConfig:
+              # HTTPPort: Integer
+              HTTPSPort: 443
+              OriginProtocolPolicy: https-only
+              OriginSSLProtocols:
+                - TLSv1.2
+                - TLSv1.1
+                - TLSv1
+            DomainName: !Sub "play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech."
+            Id: !FindInMap [Shared, Project, name]
+            # OriginCustomHeaders:
+            #   - OriginCustomHeader
+            # OriginPath: String
+            # S3OriginConfig:
+            #   S3 Origin
         PriceClass: PriceClass_All
         # Restrictions:
         #   Restriction
