Add CloudFront permissions to CloudFormation role

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -498,6 +498,7 @@ Resources:
                   - "apigateway:*"
                   - "application-autoscaling:*"
                   - "autoscaling:*"
+                  - "cloudfront:*"
                   - "cloudwatch:*"
                   - "ec2:*"
                   - "ecs:*"
