Remove trailing dot from play origin domain name

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -213,7 +213,7 @@ Resources:
                 - TLSv1.2
                 - TLSv1.1
                 - TLSv1
-            DomainName: !Sub "play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech."
+            DomainName: !Sub "play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
             Id: !FindInMap [Shared, Project, name]
             # OriginCustomHeaders:
             #   - OriginCustomHeader
