Add missing !Ref for CDN cert

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -224,7 +224,7 @@ Resources:
         # Restrictions:
         #   Restriction
         ViewerCertificate:
-          AcmCertificateArn: VPCCertificateArn
+          AcmCertificateArn: !Ref VPCCertificateArn
           # CloudFrontDefaultCertificate: Boolean
           # IamCertificateId: String
           # MinimumProtocolVersion: String
