Remove conflicting CDN aliases for the time being

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -179,9 +179,9 @@ Resources:
       DistributionConfig:
         Aliases:
           - !Sub "play.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
-          - "play.staging.prx.tech"
-          - "play.prx.tech"
-          - "play.prx.org"
+          # - "play.staging.prx.tech"
+          # - "play.prx.tech"
+          # - "play.prx.org"
         # CacheBehaviors:
           # CacheBehavior
         # Comment: String
