Add conditional CDN aliases for play

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -179,9 +179,8 @@ Resources:
       DistributionConfig:
         Aliases:
           - !Sub "play.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
-          # - "play.staging.prx.tech"
-          # - "play.prx.tech"
-          # - "play.prx.org"
+          - !If [CreateProductionResources, "play.prx.tech", "play.staging.prx.tech"]
+          - !If [CreateProductionResources, "play.prx.org", "play.staging.prx.org"]
         # CacheBehaviors:
           # CacheBehavior
         # Comment: String
