fix description of zone dns name

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -394,7 +394,7 @@ Outputs:
     Description: Domain name for play app
     Value: !GetAtt PlayStack.Outputs.HostedZoneDNSName
   CrierHostedZoneDNSName:
-    Description: Domain name for play app
+    Description: Domain name for crier app
     Value: !GetAtt CrierStack.Outputs.HostedZoneDNSName
   # CmsHostedZoneDNSName:
   #   Description: Domain name for CMS app
