--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -34,6 +34,10 @@ Parameters:
     Type: String
   CastleSecretsVersion:
     Type: String
+  CrierEcrImageTag:
+    Type: String
+  CrierSecretsVersion:
+    Type: String
   PublishEcrImageTag:
     Type: String
   PublishSecretsVersion:
