Use correct format for generic A ALIAS

--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -192,7 +192,7 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: A
-          Name: !Sub ${EnvironmentTypeAbbreviation}-${AppName}.${VPC}.prx.tech.
+          Name: !Sub ${AppName}.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
