checked feeder values

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -433,7 +433,7 @@ Resources:
         SecretsVersion: !Ref FeederSecretsVersion
         AppName: "feeder"
         CreateWorker: "true"
-        ContainerPort: 3000 #TODO gigi check these
+        ContainerPort: 3000
         ContainerMemory: 500
         ContainerCpu: 128
         HealthCheckPath: "/api/v1"
