testing web deploy; disable worker

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -432,7 +432,7 @@ Resources:
         EcrImageTag: !Ref FeederEcrImageTag
         SecretsVersion: !Ref FeederSecretsVersion
         AppName: "feeder"
-        CreateWorker: "true"
+        CreateWorker: "false"
         ContainerPort: 3000
         ContainerMemory: 500
         ContainerCpu: 128
